force-app/main/default/objects/MBMS_Batch_Log__c/MBMS_Batch_Log__c.object-meta.xml
<CustomObject>
    <description>This is an object for storing information about batch runs.</description>
    <label>Batch Log</label>
    <nameField>
        <label>Batch Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Batch Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>