force-app/main/default/objects/MBMS_Batch_Log__c/fields/MBMS_Batch_Name__c.field-meta.xml
<CustomField>
    <fullName>MBMS_Batch_Name__c</fullName>
    <description>Batch name.</description>
    <label>Batch Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>