force-app/main/default/objects/MBMS_Batch_Log__c/fields/MBMS_Message__c.field-meta.xml
<CustomField>
    <fullName>MBMS_Message__c</fullName>
    <description>Main log message.</description>
    <label>Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>