force-app/main/default/objects/MBMS_Batch_Log__c/fields/MBMS_Records_Processed__c.field-meta.xml
<CustomField>
    <fullName>MBMS_Records_Processed__c</fullName>
    <description>Amount of records processed by the batch.</description>
    <label>Records Processed</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>