force-app/main/default/objects/MBMS_Batch_Log__c/listViews/All_With_Details.listView-meta.xml
<ListView>
    <fullName>All_With_Details</fullName>
    <columns>NAME</columns>
    <columns>MBMS_Batch_Name__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>MBMS_Records_Processed__c</columns>
    <columns>MBMS_Message__c</columns>
    <filterScope>Mine</filterScope>
    <label>All With Details</label>
</ListView>